--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <version>1.0-SNAPSHOT</version>
+  
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  <version>3.3.0</version>
 
   <name>my-app</name>
   <!-- FIXME change it to the project's website -->
