--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,7 @@
   <artifactId>my-app</artifactId>
   <version>1.0-SNAPSHOT</version>
   
-  <groupId>org.codehaus.mojo</groupId>
-  <artifactId>exec-maven-plugin</artifactId>
-  <version>3.3.0</version>
+  
 
   <name>my-app</name>
   <!-- FIXME change it to the project's website -->
@@ -72,6 +70,11 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>3.3.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
